src/test/deca/codegen/valid/homemade/test/test_complet_depassement_pile_boolean.deca
{

    boolean x = true && (true && (true &&(true && (true && (true && (true && (true )))))));

}
