src/test/deca/codegen/invalid/homemade/test/test_complet_affectation_boolean_float.deca
{
    boolean x = 3.1;
}